...
    //MARK: - UI Variables
    lazy var searchTextField: UITextField = {
        let textField = UITextField(frame: .zero)
        textField.backgroundColor = .white
        textField.placeholder = "searchPlaceholder".localized
        textField.layer.cornerRadius = 10
        textField.accessibilityIdentifier = "Search input text"
        return textField
    }()
    
    let collectionView: UICollectionView = {
        let collectionViewLayout = UICollectionViewFlowLayout()
        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: collectionViewLayout)
        collectionView.register(ImageCollectionViewCell.self,
                                forCellWithReuseIdentifier: ImageCollectionViewCell.identifier)
        collectionView.backgroundColor = .white
        collectionView.accessibilityIdentifier = "Collection of Images"
        return collectionView
    }()
    
    //MARK: - BaseView functions
    func initialize() {
        backgroundColor = .black
...
